# spellbook

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: orientation-as-anti-concealment.md  spellbook-sdk.md
examples/: custom_surface_server.py
scripts/: analyze_initial_context_plan.py  append_legacy_tail.py  apply_facet_pins.py  apply_initial_block_modes.py  block_detector_test.py  facet_pin_render.py  gen_test.py  interactive.py  legacy_tool_result_repair.py  loop_test.py  out.jsonl  parse_legacy_context.py  record_test.py  repair_meta_system_prompt.py  repair_replay_metrics.py  repair_session_skill_catalog.py  repair_session_tool_surface.py  repair_tool_result_ttls.py  replay_context.py  replay_context_markdown.py  round_trip_data_test.py  ruff.toml  server.py  session_test.py  tok_test.py  translate_legacy_facet_pins.py
spellbook/: AGENTS.md  cancel_token.py  config.py  custom.py  executor.py  footer.py  fork.py  frame_lite.py  generator.py  image_blobs.py  inbound.py  ir_types.py  loop.py  nursery.py  recorder.py  rehydrator.py  round_lifecycle.py  sdk.py  session_lifecycle.py  session_manager.py  surface_builder.py  system_prompt.py  timekeeper.py
tests/: ruff.toml  test_analyze_initial_context_plan.py  test_anthropic_backend.py  test_app_runtime.py  test_app_server.py  test_append_legacy_tail.py  test_apply_facet_pins.py  test_apply_initial_block_modes.py  test_backends.py  test_block_detector.py  test_block_manager.py  test_cancel_token.py  test_config.py  test_executor.py  test_filesystem_tools.py  test_footer_controller.py  test_fork_runner.py  (+28 more)
(+80 files in other folders)
